PROJECT(SEQ)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(NOT DEFINED Boost_ADDITIONAL_VERSIONS)
  SET(Boost_ADDITIONAL_VERSIONS
  "1.35" "1.36" "1.37" "1.38" "1.39"
  "1.40" "1.41" "1.42" "1.43" "1.44" "1.45" "1.46" "1.47" "1.48" "1.49" "1.55" "1.56" "1.57" "1.58")
ENDIF(NOT DEFINED Boost_ADDITIONAL_VERSIONS)

SET(Boost_USE_MULTITHREADED ON)

IF(DEFINED BOOST_PREFIX AND NOT DEFINED BOOST_ROOT)
  SET(BOOST_ROOT ${BOOST_PREFIX})
ENDIF(DEFINED BOOST_PREFIX AND NOT DEFINED BOOST_ROOT)

SET(Boost_DEBUG ON)

FIND_PACKAGE(Boost 1.35
  COMPONENTS
  REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING
      "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(${CMAKE_SIZEOF_VOID_P} EQUAL 8)
    MESSAGE("64-bit detected: compiling with -fPIC for HIVGENSIM")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ENDIF(${CMAKE_SIZEOF_VOID_P} EQUAL 8)

SUBDIRS(src test)
